--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9015, type: ss, cipher: aes-256-cfb, password: ZpNDDKRu9MagNvaf}
-  - {name: 🇳🇱 荷兰-192.0KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇨🇳 中国-7.59MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.99MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林), server: 185.167.116.24, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇳🇱 荷兰-539.3KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林), server: 213.183.53.221, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林), server: 185.167.116.38, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
+  - {name: 🇨🇳 中国-2.43MB/s(Youtube:不良林), server: 527hk3.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk3.fans8.xyz}}
+  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-1.11MB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-752.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-365.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇸🇬 新加坡-2.54MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.50MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-458.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-192.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-7.59MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.99MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-954.4KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-539.3KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-752.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.54MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
