--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,12 +5,12 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林), server: 213.183.53.221, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
-  - {name: 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林), server: 185.167.116.38, port: 9007, type: ss, cipher: aes-256-cfb, password: kSPmvwdFzGMMW5pY}
-  - {name: 🇨🇳 中国-2.43MB/s(Youtube:不良林), server: 527hk3.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 527hk3.fans8.xyz}}
-  - {name: 🇺🇸 美国-2.60MB/s(Youtube:不良林), server: 167.88.61.50, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇩🇪 德国-2.01MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.11MB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 185.246.155.46, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
+  - {name: 🇳🇱 荷兰-184.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇳🇱 荷兰-832.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-608.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
   - {name: 🇳🇱 荷兰-365.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
@@ -21,12 +21,12 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
@@ -36,12 +36,12 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
@@ -52,12 +52,12 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
@@ -72,12 +72,12 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
@@ -87,12 +87,12 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
@@ -103,12 +103,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
@@ -128,12 +128,12 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-962.6KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-155.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.60MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.01MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.11MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
