--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
-  - {name: 🇳🇱 荷兰-1.75MB/s(Youtube:不良林), server: 185.246.155.46, port: 9073, type: ss, cipher: aes-256-cfb, password: daFYagqDdBdA6VTX}
-  - {name: 🇳🇱 荷兰-184.1KB/s(Youtube:不良林), server: 213.183.59.214, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇳🇱 荷兰-832.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
   - {name: 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-608.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
+  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-376.2KB/s(Youtube:不良林), server: 198.57.27.225, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇳🇱 荷兰-956.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 🇨🇳 中国-6.55MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇳🇱 荷兰-676.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
-  - {name: 🇳🇱 荷兰-365.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇳🇱 荷兰-305.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
   - {name: 🇸🇬 新加坡-1.50MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.75MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-184.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-832.7KB/s(Youtube:不良林)
       - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-608.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-365.9KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
 rules:
