--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林), server: 185.167.116.253, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 167.88.61.50, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-376.2KB/s(Youtube:不良林), server: 198.57.27.225, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇳🇱 荷兰-956.2KB/s(Youtube:不良林), server: 213.183.59.206, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 🇨🇳 中国-6.55MB/s(Youtube:不良林), server: cm-gz.okvpn.xyz, port: 20005, type: trojan, password: e10b7aab-3498-472a-9a3f-f15800163aa7, sni: cm-gz.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林), server: 213.183.53.221, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
+  - {name: 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林), server: 185.167.116.252, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
+  - {name: 🇳🇱 荷兰-209.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.253, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
+  - {name: 🇳🇱 荷兰-944.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇳🇱 荷兰-291.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
   - {name: 🇳🇱 荷兰-676.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
   - {name: 🇳🇱 荷兰-305.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
   - {name: 🇳🇱 荷兰-1.15MB/s(Youtube:不良林), server: 213.183.59.206, port: 9057, type: ss, cipher: aes-256-cfb, password: wjTugX3ZtHMB9c3Z}
-  - {name: 🇸🇬 新加坡-1.50MB/s(Youtube:不良林), server: w13.udpgw.com, port: 443, type: trojan, password: 16877c70-e7b8-11ec-99f2-1239d0255272, sni: w13.udpgw.com, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-187.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-376.2KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-956.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.55MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-305.5KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1.15MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.50MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
