--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林), server: 213.183.53.221, port: 9032, type: ss, cipher: aes-256-cfb, password: UWZQeLRWnkqgkseq}
-  - {name: 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林), server: 185.167.116.252, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇳🇱 荷兰-209.3KB/s(Youtube:不良林), server: 213.183.59.214, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
-  - {name: 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林), server: 185.167.116.253, port: 9014, type: ss, cipher: aes-256-cfb, password: KnJGad3FqTvjqbaX}
-  - {name: 🇳🇱 荷兰-944.7KB/s(Youtube:不良林), server: 213.183.59.206, port: 9008, type: ss, cipher: aes-256-cfb, password: y9VURyNzJWNRYEGQ}
+  - {name: 🇨🇦 加拿大-1.01MB/s(Youtube:不良林), server: 198.57.27.225, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇩🇪 德国-3.36MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林), server: 213.183.53.208, port: 9045, type: ss, cipher: aes-256-cfb, password: Lp27rqyJq72bZsqX}
+  - {name: 🇨🇦 加拿大-2.46MB/s(Youtube:不良林), server: 198.57.27.225, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-2.46MB/s(Youtube:不良林), server: 167.88.61.50, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇳🇱 荷兰-291.4KB/s(Youtube:不良林), server: 213.183.59.206, port: 9030, type: ss, cipher: aes-256-cfb, password: GeregetR8cvQHzYr}
   - {name: 🇳🇱 荷兰-676.9KB/s(Youtube:不良林), server: 213.183.59.206, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
   - {name: 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林), server: 213.183.59.206, port: 9011, type: ss, cipher: aes-256-cfb, password: M3t2ZEQcMGRWBjRa}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-909.2KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.07MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-209.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.29MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-944.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.01MB/s(Youtube:不良林)
+      - 🇩🇪 德国-3.36MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-583.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.46MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.46MB/s(Youtube:不良林)
       - 🇳🇱 荷兰-291.4KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-676.9KB/s(Youtube:不良林)
       - 🇳🇱 荷兰-1002.5KB/s(Youtube:不良林)
